css/style.css
body {
    font-family: Helvetica, Arial, sans-serif;
    padding: 5% 10%;
    background-color: #f4f4f5;
    line-height: 1.5;
    color: #333;
    margin: 0 auto;
}

.container {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

main {
    flex: 1;
}

@media (max-width: 600px) {
    body {
        padding: 10%;
        max-width: 90%;
    }
}

h1,
h2,
h3 {
    font-family: Georgia, serif;
    margin-top: 1em;
    margin-bottom: 0.8em;
    color: #222;
}

h1 {
    font-weight: bold;
}

p {
    font-size: 1.2em;
    margin-top: 0.4em;
    margin-bottom: 0.8em;
    line-height: 1.5;
}

li {
    font-size: 1.2em;
    margin-bottom: 0.2em;
}

ul {
    margin-bottom: 0.6em;
    padding-left: 1.2em;
}

a {
    color: #0066cc;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

a:visited {
    color: #8b5cf6;
}

iframe {
    display: block;
    margin: 1.5em auto;
    max-width: 100%;
    border: 0;
}

/* Images */

.gallery {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-auto-rows: auto;
    grid-auto-flow: dense;
    gap: 0.4em;
}

@media (max-width: 1024px) {
    .gallery {
        grid-template-columns: repeat(2, 1fr);
    }
}

@media (max-width: 600px) {
    .gallery {
        grid-template-columns: 1fr;
    }
}

img {
    width: 100%;
    height: auto;
    object-fit: cover;
}

/* Image to right of paragraphs of text */

.text-image-container{
    display: flex;
    align-items: flex-start;
    gap: 1em;
}

.text-image-container figure{
    flex-shrink: 0;
}

.text-image-container figure img{
        width: 100%;
        max-width: 20em;             
        height: auto;             
}

figcaption{
    font-size: 0.8em;
    margin-top: 0.5em;
}

/* Top navigation menu */

nav {
    display: flex;
    align-items: center;
}

.menu {
    padding: 0;
    margin: 0;
}

.menu ul {
    list-style: none;
    display: flex;
}

.menu li {
    background-color: #3b0764;
    margin-right: -1px; /* Prevent double border between elements */
    font-size: 1.2em;
}

.menu a {
    display: block;
    padding: .5em 1em;
    color: white;
    text-decoration: none;
    text-align: center;
    border: 1px solid #ccc;
    white-space: nowrap;
}

.menu a:hover {
    background-color: #581c87;
}

.hamburger {
    display: none;
}

.brand-name {
    font-size: 2em;
    font-family: Georgia, serif;
    color: #3b0764;
    margin: 0;
    text-align: center;
    padding-right: 1em;
    white-space: nowrap;
}

/* Footer */

footer p {
    font-size: 1em;
    text-align: center;
}

/* To make brand name and nav sit next to each other on screens larger than mobile */
@media (min-width: 600px) {
    .brand-nav-container {
        display: flex;
        align-items: center;
    }
}

/* Image on bio page goes below text under 1000px width */

@media (max-width: 1000px) {
    .text-image-container{
        display: flex;
        align-items: center;
        flex-direction: column;
        gap: 1em;
    }
    
    .text-image-container figure img{
            width: 100%;
            height: auto;             
    }
}

/* Mobile */

@media (max-width: 600px) {

    /* Top nav for mobile */

    .menu ul {
        flex-direction: column;
        display: none;
    }

    .menu li {
        margin: 0;
        width: 100%;
        font-size: 1em;
    }

    .hamburger {
        display: flex;
        align-items: center; 
        cursor: pointer;
        width: 3em;
        height: 3em;
        background: none;
        border: none;
        position: absolute;
        right: 4em;
        top: 3em;
    }

    .hamburger span {
        position: absolute;
        width: 1.6em;
        height: 0.2em;
        background-color: black;
    }

    /* Closed menu hamburger layout */

    /*Top line */
    .hamburger span:nth-child(1) {
        transform: translateY(-0.4em);
    }

    /* Bottom line */
    .hamburger span:nth-child(2) {
        transform: translateY(0.4em);
    }

    .hamburger .yin{
        transform: rotate(90deg);
        background-color: transparent;
    }

    /* Open menu: yin line becomes visible, creating a new trigram */

    .menu.open .yin {
        background-color: #f4f4f5;
    }

    /* Show menu when toggled */
    .menu.open ul {
        margin-top: 1em;
        display: flex;
        width: 100%;
    }

    .menu.open li{
        margin-bottom: -1px; /* Prevent double border between elements */
    }

    .brand-name {
        font-size: 1.2em;
    }

    /* Images on mobile */


}

